--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PR Automático</title>
 </head>
 <body>
-    
+    <h1>Projeto para demonstrar a criação de PR automático via Github Actions</h1>
 </body>
 </html>
