Adicionado texto no HTML

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Projeto para demonstrar a criação de PR automático via Github Actions</h1>
     <h2>De uma branch de horigem para a Main</h2>
     <h2>O mesmo ficará em aberto na aba de pull requests para revisão e aprovação</h2>
+    <h2>Vamos testar</h2>
 </body>
 </html>
